--- a/BloodDonation/Views/CityTables/Edit.cshtml
+++ b/BloodDonation/Views/CityTables/Edit.cshtml
@@ -4,34 +4,26 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<div class="col-md-6">
+    <div class="contact-form-block">
+        <h2 class="contact-title">Edit City</h2>
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>CityTable</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.CityID)
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.City, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.CityID)
+            <div class="form-group">
+                Update City Name:
                 @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+            <div class="form-group">
+                <input type="submit" style="float: right" value="Update" class="btn btn-theme" />
+                @Html.ActionLink("Back", "Index", null, new { @class = "btn btn-theme-invert" })
             </div>
-        </div>
+        }
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
