--- a/BloodDonation/Views/Shared/_Layout.cshtml
+++ b/BloodDonation/Views/Shared/_Layout.cshtml
@@ -143,7 +143,9 @@
             </div>
         </section>
     </header> <!-- end main-header  -->
-    @RenderBody();
+    <div class="container">
+        @RenderBody()
+    </div>
     <!-- START FOOTER  -->
     <footer>
         <section class="footer-widget-area footer-widget-area-bg">
