--- a/BloodDonation/Views/RequestType/AllRequestType.cshtml
+++ b/BloodDonation/Views/RequestType/AllRequestType.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DatabaseLayer.RequestTypeTable>
+﻿@model IEnumerable<BloodDonation.Models.RequestTypeMV>
 
 @{
     ViewBag.Title = "AllRequestType";
