Request Type Views Design Added

--- a/BloodDonation/Views/CityTables/Edit.cshtml
+++ b/BloodDonation/Views/CityTables/Edit.cshtml
@@ -1,13 +1,12 @@
 ﻿@model DatabaseLayer.CityTable
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Request Type";
 }
 
 <div class="col-md-6">
     <div class="contact-form-block">
-        <h2 class="contact-title">Edit City</h2>
-
+        <h2 class="contact-title">Edit Request Type</h2>
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
