--- a/BloodDonation/Views/CityTables/Index.cshtml
+++ b/BloodDonation/Views/CityTables/Index.cshtml
@@ -8,7 +8,7 @@
     <div class="contact-form-block">
         <h2 class="contact-title">All Cities</h2>
         <p>
-            @Html.ActionLink("New City", "Create", null, new { @class = "btn btn-primary" })
+            @Html.ActionLink("New City", "Create", null, new { @class = "btn btn-success" })
         </p>
         <table class="table table-hover">
             <tr>
