--- a/BloodDonation/Views/RequestType/AllRequestType.cshtml
+++ b/BloodDonation/Views/RequestType/AllRequestType.cshtml
@@ -1,33 +1,35 @@
 ﻿@model IEnumerable<BloodDonation.Models.RequestTypeMV>
 
 @{
-    ViewBag.Title = "AllRequestType";
+    ViewBag.Title = "All Request Types";
 }
 
-<h2>AllRequestType</h2>
+<div class="col-md-8">
+    <div class="contact-form-block">
+        <h2 class="contact-title">All Request Type</h2>
+        <p>
+            @Html.ActionLink("New Request Type", "Create", null, new { @class = "btn btn-success" })
+        </p>
+        <table class="table table-hover">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.RequestType)
+                </th>
+                <th></th>
+            </tr>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.RequestType)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.RequestType)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.RequestTypeID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.RequestTypeID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.RequestTypeID })
-        </td>
-    </tr>
-}
-
-</table>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.RequestType)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.RequestTypeID }, new { @class = "btn btn-primary" }) 
+                        @Html.ActionLink("Delete", "Delete", new { id = item.RequestTypeID }, new { @class = "btn btn-danger" })
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
+</div>
