--- a/BloodDonation/Views/RequestType/Delete.cshtml
+++ b/BloodDonation/Views/RequestType/Delete.cshtml
@@ -1,14 +1,12 @@
 ﻿@model BloodDonation.Models.RequestTypeMV
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Request Types";
 }
-
-<h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>RequestTypeTable</h4>
+    <h4>Request Type</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -25,8 +23,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-danger" />
+            @Html.ActionLink("Back", "AllRequestType", null, new { @class = "btn btn-theme-invert" })
         </div>
     }
 </div>
