--- a/BloodDonation/Views/RequestType/Edit.cshtml
+++ b/BloodDonation/Views/RequestType/Edit.cshtml
@@ -1,37 +1,37 @@
 ﻿@model BloodDonation.Models.RequestTypeMV
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Request Type";
 }
 
-<h2>Edit</h2>
+<div class="col-md-6">
+    <div class="contact-form-block">
+        <h2 class="contact-title">Edit Request Type</h2>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>RequestTypeTable</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.RequestTypeID)
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.RequestTypeID)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.RequestType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="form-group">
+                @Html.LabelFor(model => model.RequestType, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.RequestType, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.RequestType, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                Enter Request Type:
                 @Html.EditorFor(model => model.RequestType, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.RequestType, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+            <div class="form-group">
+                <input type="submit" style="float: right" value="Update" class="btn btn-theme" />
+                @Html.ActionLink("Back", "AllRequestType", null, new { @class = "btn btn-theme-invert" })
             </div>
-        </div>
+        }
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
