--- a/BloodDonation/Views/Shared/_Layout.cshtml
+++ b/BloodDonation/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Online Blood Donation</title>
+    <title>@ViewBag.Title | Online Blood Donation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="Reddrop Buddies - Blood Donation Campaign & Multi-Concept Activism Template">
     <meta name="author" content="xenioushk">
@@ -143,7 +143,7 @@
             </div>
         </section>
     </header> <!-- end main-header  -->
-    <div class="container">
+    <div class="container" style="margin-bottom: 2.5%">
         @RenderBody()
     </div>
     <!-- START FOOTER  -->
