User Types CRUD Added

--- a/BloodDonation/Views/CityTables/Edit.cshtml
+++ b/BloodDonation/Views/CityTables/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DatabaseLayer.CityTable
 
 @{
-    ViewBag.Title = "Request Type";
+    ViewBag.Title = "City";
 }
 
 <div class="col-md-6">
