--- a/BloodDonation/Views/CityTables/Index.cshtml
+++ b/BloodDonation/Views/CityTables/Index.cshtml
@@ -26,6 +26,7 @@
                     </td>
                     <td class="text-right">
                         @Html.ActionLink("Edit", "Edit", new { id = item.CityID }, new { @class = "btn btn-primary" })
+                        @Html.ActionLink("Delete", "Delete", new { id = item.CityID }, new { @class = "btn btn-danger" })
                     </td>
                 </tr>
             }
