--- a/BloodDonation/Views/Shared/_Layout.cshtml
+++ b/BloodDonation/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="Reddrop Buddies - Blood Donation Campaign & Multi-Concept Activism Template">
     <meta name="author" content="xenioushk">
-    <link rel="shortcut icon" href="~/Content/Template/images/favicon.png" />
+    <link rel="shortcut icon" href="../Content/Template/images/favicon.png" />
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -26,7 +26,7 @@
 </head>
 <body>
     <div id="preloader">
-        <span class="margin-bottom"><img src="~/Content/Template/images/loader.gif" alt="" /></span>
+        <span class="margin-bottom"><img src="../Content/Template/images/loader.gif" alt="" /></span>
     </div>
 
     <!--  HEADER -->
