--- a/BloodDonation/Views/Home/MainHome.cshtml
+++ b/BloodDonation/Views/Home/MainHome.cshtml
@@ -312,8 +312,11 @@
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 margin-top-appointment-reverse">
                 <div class="appointment-form-wrapper theme-custom-box-shadow text-center clearfix wow zoomIn">
                     <h3 class="join-heading join-heading-alt">Registration</h3>
-                    @using (Html.BeginForm("", "", FormMethod.Post, new { @class = "appoinment-form" }))
+                    @using (Html.BeginForm("SelectUser", "Registration", FormMethod.Post, new { @class = "appoinment-form" }))
                     {
+                        @Html.AntiForgeryToken()
+
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group col-md-6">
                             @Html.EditorFor(model => model.User.UserName, new { htmlAttributes = new { @class = "form-control", @placeholder = "User Name", @type = "text" } })
                             @Html.ValidationMessageFor(model => model.User.UserName, "", new { @class = "text-danger" })
