Donor Registration Added

--- a/BloodDonation/Views/Registration/HospitalUser.cshtml
+++ b/BloodDonation/Views/Registration/HospitalUser.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="appointment-form-wrapper theme-custom-box-shadow text-center clearfix wow zoomIn">
-    <h3 class="join-heading join-heading-alt">Hospital Reigstration Form</h3>
+    <h3 class="join-heading join-heading-alt">Hospital Registration Form</h3>
     @using (Html.BeginForm("HospitalUser", "Registration", FormMethod.Post, new { @class = "appoinment-form" }))
     {
         @Html.AntiForgeryToken()
