Blood Bank Registration Added

--- a/BloodDonation/Views/Home/MainHome.cshtml
+++ b/BloodDonation/Views/Home/MainHome.cshtml
@@ -1,4 +1,4 @@
-﻿@model BloodDonation.Models.ReigstrationMV
+﻿@model BloodDonation.Models.RegistrationMV
 
 <!--  HOME SLIDER BLOCK  -->
 <div class="slider-wrap">
