--- a/BloodDonation/Views/Registration/DonorUser.cshtml
+++ b/BloodDonation/Views/Registration/DonorUser.cshtml
@@ -1,6 +1,6 @@
-﻿@model BloodDonation.Models.ReigstrationMV
+﻿@model BloodDonation.Models.RegistrationMV
 @{
-    ViewBag.Title = "Donor Reigstration";
+    ViewBag.Title = "Donor Registration";
 }
 
 <div class="appointment-form-wrapper theme-custom-box-shadow text-center clearfix wow zoomIn">
