--- a/BloodDonation/Views/Registration/HospitalUser.cshtml
+++ b/BloodDonation/Views/Registration/HospitalUser.cshtml
@@ -1,6 +1,6 @@
-﻿@model BloodDonation.Models.ReigstrationMV
+﻿@model BloodDonation.Models.RegistrationMV
 @{
-    ViewBag.Title = "Hospital Reigstration";
+    ViewBag.Title = "Hospital Registration";
 }
 
 <div class="appointment-form-wrapper theme-custom-box-shadow text-center clearfix wow zoomIn">
