--- a/BloodDonation/Views/Registration/DonorUser.cshtml
+++ b/BloodDonation/Views/Registration/DonorUser.cshtml
@@ -20,40 +20,48 @@
         @Html.HiddenFor(model => model.User.EmailAddress)
 
         <div class="form-group col-md-6">
+            <label style="float: left">Enter Donor Full Name:</label>
             @Html.EditorFor(model => model.Donor.FullName, new { htmlAttributes = new { @class = "form-control", @placeholder = "Full Name", @type = "text" } })
             @Html.ValidationMessageFor(model => model.Donor.FullName, "", new { @class = "text-danger" })
         </div>
         <div class="form-group col-md-6">
+            <label style="float: left">Enter Donor Contact №:</label>
             @Html.EditorFor(model => model.Donor.ContactNo, new { htmlAttributes = new { @class = "form-control", @placeholder = "Phone №" } })
             @Html.ValidationMessageFor(model => model.Donor.ContactNo, "", new { @class = "text-danger" })
         </div>
         <div class="form-group col-md-6">
+            <label style="float: left">Enter Donor CNIC:</label>
             @Html.EditorFor(model => model.Donor.CNIC, new { htmlAttributes = new { @class = "form-control", @placeholder = "CNIC", @type = "number" } })
             @Html.ValidationMessageFor(model => model.Donor.CNIC, "", new { @class = "text-danger" })
         </div>
         <div class="form-group col-md-6">
+            <label style="float: left">Select Donor Gender:</label>
             <div class="select-style">
                 @Html.DropDownList("GenderID", null, "-- Gender", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.GenderID, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group col-md-6">
+            <label style="float: left">Select Donor Blood Group:</label>
             <div class="select-style">
                 @Html.DropDownList("BloodGroupID", null, "-- Your Blood Group", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.BloodGroupID, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group col-md-6">
+            <label style="float: left">Select Donor City:</label>
             <div class="select-style">
                 @Html.DropDownList("CityID", null, "-- Your City", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CityID, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group col-md-6">
+            <label style="float: left">Enter Donor LDD:</label>
             @Html.EditorFor(model => model.Donor.LastDonationDate, new { htmlAttributes = new { @class = "form-control", @placeholder = "Last Donation Date" } })
             @Html.ValidationMessageFor(model => model.Donor.LastDonationDate, "", new { @class = "text-danger" })
         </div>
         <div class="form-group col-md-6">
+            <label style="float: left">Enter Donor Location:</label>
             @Html.EditorFor(model => model.Donor.Location, new { htmlAttributes = new { @class = "form-control", @placeholder = "Address", @type = "text" } })
             @Html.ValidationMessageFor(model => model.Donor.Location, "", new { @class = "text-danger" })
         </div>
