--- a/BloodDonation/Views/Registration/HospitalUser.cshtml
+++ b/BloodDonation/Views/Registration/HospitalUser.cshtml
@@ -20,28 +20,34 @@
         @Html.HiddenFor(model => model.User.EmailAddress)
 
         <div class="form-group col-md-6">
+            <label style="float: left">Enter Hospital Full Name:</label>
             @Html.EditorFor(model => model.Hospital.FullName, new { htmlAttributes = new { @class = "form-control", @placeholder = "Title", @type = "text" } })
             @Html.ValidationMessageFor(model => model.Hospital.FullName, "", new { @class = "text-danger" })
         </div>
         <div class="form-group col-md-6">
+            <label style="float: left">Enter Hospital Phone №:</label>
             @Html.EditorFor(model => model.Hospital.PhoneNo, new { htmlAttributes = new { @class = "form-control", @placeholder = "Phone №" } })
             @Html.ValidationMessageFor(model => model.Hospital.PhoneNo, "", new { @class = "text-danger" })
         </div>
         <div class="form-group col-md-6">
+            <label style="float: left">Enter Hospital Email:</label>
             @Html.EditorFor(model => model.Hospital.Email, new { htmlAttributes = new { @class = "form-control", @placeholder = "Email Address", @type = "email" } })
             @Html.ValidationMessageFor(model => model.Hospital.Email, "", new { @class = "text-danger" })
         </div>
         <div class="form-group col-md-6">
+            <label style="float: left">Enter Hospital Website:</label>
             @Html.EditorFor(model => model.Hospital.WebSite, new { htmlAttributes = new { @class = "form-control", @placeholder = "Website", @type = "url" } })
             @Html.ValidationMessageFor(model => model.Hospital.WebSite, "", new { @class = "text-danger" })
         </div>
         <div class="form-group col-md-6">
+            <label style="float: left">Select Hospital City:</label>
             <div class="select-style">
                 @Html.DropDownList("CityID", null, "-- Your City", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CityID, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group col-md-6">
+            <label style="float: left">Enter Hospital Address:</label>
             @Html.EditorFor(model => model.Hospital.Address, new { htmlAttributes = new { @class = "form-control", @placeholder = "Address", @type = "text" } })
             @Html.ValidationMessageFor(model => model.Hospital.Address, "", new { @class = "text-danger" })
         </div>
