Login Adaptive Design Added

--- a/BloodDonation/Views/Home/Login.cshtml
+++ b/BloodDonation/Views/Home/Login.cshtml
@@ -25,8 +25,23 @@
     <link href="~/Content/Template/css/owl.carousel.css" rel="stylesheet" type="text/css">
     <link href="~/Content/Template/css/venobox.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="~/Content/Template/css/styles.css" />
+
+    <style>
+        body {
+            background-image: url('../../Content/Template/images/login_bg.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            height: 100%;
+            background-attachment: fixed;
+        }
+        body, html {
+            height: 100%;
+            margin: 0;
+        }
+    </style>
 </head>
-<body style="background-image: url('../../Content/Template/images/login_bg.jpg');">
+<body>
     <div id="preloader">
         <span class="margin-bottom"><img src="../Content/Template/images/loader.gif" alt="" /></span>
     </div>
