--- a/BloodDonation/Views/Home/MainHome.cshtml
+++ b/BloodDonation/Views/Home/MainHome.cshtml
@@ -581,5 +581,5 @@
 </section>
 
 <script type="text/javascript">
-    alert('@ViewData["Message"]');
+    // alert('@ViewData["Message"]');
 </script>
