User Profile Added

--- a/BloodDonation/Views/Home/MainHome.cshtml
+++ b/BloodDonation/Views/Home/MainHome.cshtml
@@ -206,7 +206,9 @@
                         <div class="row section-heading-wrapper margin-bottom-11">
                             <div class="col-lg-12 col-md-12 col-sm-12 text-left no-img-separator">
                                 <h2><strong>Who We Are?</strong></h2>
-                                <span class="heading-separator heading-separator-horizontal"></span>
+                                <div style="margin-top: 4%; margin-bottom: 1%">
+                                    <span class="heading-separator heading-separator-horizontal"></span>
+                                </div>
                             </div> <!-- end .col-sm-10  -->
                         </div>
 
@@ -240,7 +242,9 @@
             <div class="row section-heading-wrapper-alt">
                 <div class="col-md-12 col-sm-12 text-center no-img-separator">
                     <h4>Awesome Words From Members</h4>
-                    <span class="heading-separator heading-separator-horizontal"></span>
+                    <div style="margin-top: 2%; margin-bottom: 1%">
+                        <span class="heading-separator heading-separator-horizontal"></span>
+                    </div>
                     <h2 class="extra-large">JOIN WITH US AND SAVE LIFE</h2>
                 </div> <!-- end .col-sm-10  -->
             </div>
@@ -309,7 +313,9 @@
                     <div class="row section-heading-wrapper">
                         <div class="col-md-12 col-sm-12 text-left no-img-separator">
                             <h2>OUR CAMPAIGNS</h2>
-                            <span class="heading-separator heading-separator-horizontal"></span>
+                            <div style="margin-top: 4%">
+                                <span class="heading-separator heading-separator-horizontal"></span>
+                            </div>
                             <h4 class="margin-top-24">
                                 <small>
                                     All over the world we have arranged total sixty thousands donation campaign
@@ -432,7 +438,9 @@
                     <div class="row section-heading-wrapper">
                         <div class="col-md-12 col-sm-12 text-left no-img-separator">
                             <h4>Good To Know</h4>
-                            <span class="heading-separator heading-separator-horizontal"></span>
+                            <div style="margin-top: 4%; margin-bottom: 4%;">
+                                <span class="heading-separator heading-separator-horizontal"></span>
+                            </div>
                             <h2>
                                 Helpful Information
                             </h2>
@@ -503,7 +511,7 @@
                 </div> <!--  end .col-lg-6 -->
             </div> <!--  end .row  -->
 
-            <div class="row wow fadeIn">
+            <div class="row wow fadeIn" style="margin-top: 3%">
                 <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                     <div class="counter-block-1 text-center">
                         <i class="fa fa-heartbeat icon"></i>
@@ -545,7 +553,9 @@
             <div class="row section-heading-wrapper-alt">
                 <div class="col-md-12 col-sm-12 text-center no-img-separator">
                     <h4>OUR VOLUNTEERS</h4>
-                    <span class="heading-separator heading-separator-horizontal"></span>
+                    <div style="margin-top: 2%; margin-bottom: 1%;">
+                        <span class="heading-separator heading-separator-horizontal"></span>
+                    </div>
                     <h2 class="extra-large">The volunteers who give their time and talents help to fulfill our mission.</h2>
                 </div> <!-- end .col-sm-10  -->
             </div>
@@ -641,7 +651,9 @@
             <div class="row section-heading-wrapper">
                 <div class="col-md-12 col-sm-12 text-center no-img-separator">
                     <h2>CAMPAIGN GALLERY</h2>
-                    <span class="heading-separator"></span>
+                    <div style="margin-bottom: 1%">
+                        <span class="heading-separator"></span>
+                    </div>
                     <h4>our prestigious voluntary work on campaigns by the team</h4>
                 </div> <!-- end .col-sm-10  -->
             </div> <!-- end .row  -->
