--- a/BloodDonation/Views/User/UserProfile.cshtml
+++ b/BloodDonation/Views/User/UserProfile.cshtml
@@ -10,7 +10,7 @@
         <div class="row">
             <h4 class="col-md-4">User Details</h4>
             <div class="col-md-8" align="right">
-                @Html.ActionLink("Edit Profile", "EditProfile", new { id = Model.UserID }, new { @class = "btn btn-theme" })
+                @Html.ActionLink("Edit Profile", "EditUserProfile", new { id = Model.UserID }, new { @class = "btn btn-theme" })
             </div>
         </div>
         <hr />
