Campaign Admin View Added

--- a/BloodDonation/Views/Shared/_Layout.cshtml
+++ b/BloodDonation/Views/Shared/_Layout.cshtml
@@ -106,6 +106,7 @@
                                         <li><a href="event-single.html">Single Campaign</a></li>
                                         @if (userTypeID == 5)
                                         {
+                                            <li><a href="@Url.Content("~/BloodBank/AllCampaigns")">Blood Bank Campaigns</a></li>
                                             <li><a href="@Url.Content("~/BloodBank/BloodBankStock")">Stock</a></li>
                                         }
                                     </ul>
