--- a/BloodDonation/Views/Home/MainHome.cshtml
+++ b/BloodDonation/Views/Home/MainHome.cshtml
@@ -23,6 +23,10 @@
     <link rel="stylesheet" href="~/Content/Template/css/styles.css" />
 </head>
 <body>
+    <div id="preloader">
+        <span class="margin-bottom"><img src="../Content/Template/images/loader.gif" alt="" /></span>
+    </div>
+
     <header class="main-header clearfix" data-sticky_header="true">
         <div class="top-bar clearfix">
             <div class="container">
@@ -84,7 +88,7 @@
                             <li>
                                 <a href="#">Campaign</a>
                                 <ul class="drop-down">
-                                    <li><a href="events.html">All Campaigns</a></li>
+                                    <li><a href="@Url.Content("~/Home/AllCampaigns")">All Campaigns</a></li>
                                     <li><a href="event-single.html">Single Campaign</a></li>
                                 </ul>
                             </li>
