--- a/BloodDonation/Views/BloodBank/BloodBankStock.cshtml
+++ b/BloodDonation/Views/BloodBank/BloodBankStock.cshtml
@@ -8,6 +8,7 @@
     <div class="contact-form-block">
         <h2 class="contact-title">Blood Bank Stock</h2>
         <p>
+            @Html.ActionLink("Add Blood", "AddNewDonorByBloodBank", "Accounts", null, new { @class = "btn btn-success" })
             @Html.ActionLink("New Campaign", "NewCampaign", null, new { @class = "btn btn-success" })
             @Html.ActionLink("Campaign History", "CampaignHistory", null, new { @class = "btn btn-primary" })
         </p>
